--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+To do:
 
-Things you may want to cover:
+* Add request specs
 
-* Ruby version
+* Add feature specs
 
-* System dependencies
+* Extract front-end component into separate app (iron-ui)
 
-* Configuration
+* Update README with description
 
-* Database creation
+* Enable WorkoutSet updates from mobile
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Avoid accidental creation of new workouts (save Workout on save of associated WorkoutSet)
